# public/swagger.json
@@ -1276,6 +1276,39 @@
                 ]
             }
         },
+        "/api/v1/demo-products": {
+            "get": {
+                "tags": [
+                    "Demoproducts"
+                ],
+                "summary": "List Demoproducts",
+                "operationId": "2c110892f7e902e0879f1e7e707dc4aa",
+                "responses": {
+                    "200": {
+                        "description": "List retrieved successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "success"
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/DemoproductResponse"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/files": {
             "get": {
                 "tags": [
@@ -2806,6 +2839,32 @@
                 },
                 "type": "object"
             },
+            "DemoproductResponse": {
+                "title": "Demoproduct Response",
+                "required": [
+                    "id",
+                    "name"
+                ],
+                "properties": {
+                    "id": {
+                        "description": "Unique identifier",
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "name": {
+                        "description": "Resource name",
+                        "type": "string",
+                        "example": "Example Name"
+                    },
+                    "created_at": {
+                        "description": "Creation timestamp",
+                        "type": "string",
+                        "example": "2026-02-26 12:00:00",
+                        "nullable": true
+                    }
+                },
+                "type": "object"
+            },
             "PaginatedResponse": {
                 "title": "Paginated Response",
                 "description": "Generic pagination payload",
@@ -3515,6 +3574,10 @@
         {
             "name": "API Keys",
             "description": "API Keys"
+        },
+        {
+            "name": "Demoproducts",
+            "description": "Demoproducts"
         }
     ]
 }
